networkpolicy/pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-a
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:alpine
