networkpolicy/pod3.yml
# nginx-pod-c.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod-c
  labels:
    app: nginx3
spec:
  containers:
  - name: nginx
    image: nginx:alpine
